--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,13 +30,15 @@
     "tailwindcss-primeui": "^0.5.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "vite": "^6.2.1",
+    "vue-tsc": "^2.2.8",
+    "@types/node": "^22.13.9",
+    "@types/vue": "^1.0.31"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.13.9",
-    "@types/vue": "^1.0.31",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vitest/eslint-plugin": "^1.1.36",
@@ -56,9 +58,7 @@
     "prettier": "3.5.3",
     "start-server-and-test": "^2.0.10",
     "typescript": "~5.8.0",
-    "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2",
-    "vitest": "^3.0.8",
-    "vue-tsc": "^2.2.8"
+    "vitest": "^3.0.8"
   }
 }
