--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,19 +22,20 @@
     "@primeuix/themes": "^1.0.0",
     "@primevue/forms": "^4.3.2",
     "@tailwindcss/vite": "^4.0.14",
+    "@types/node": "^22.13.9",
+    "@types/vue": "^1.0.31",
     "axios": "^1.8.3",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.2",
     "tailwindcss": "^4.0.14",
     "tailwindcss-primeui": "^0.5.1",
+    "vee-validate": "^4.15.0",
+    "vite": "^6.2.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "zod": "^3.24.2",
-    "vite": "^6.2.1",
     "vue-tsc": "^2.2.8",
-    "@types/node": "^22.13.9",
-    "@types/vue": "^1.0.31"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
